<resources>
    <string name="app_name">Calculator</string>
    <string name="AC">AC</string>
    <string name="sign">+/-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">X</string>
    <string name="point">.</string>
    <string name="quotient">/</string>
    <string name="module">%</string>
    <string name="equal">=</string>
    <string name="pow">^</string>
    <string name="sqrt">sqrt</string>
    <string name="sin">sin</string>
    <string name="cosin">cos</string>
</resources>