<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/totalTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:padding="20dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:background="@color/white"
        android:padding="20dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textSize="40sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                    <Button
                        android:id="@+id/acButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:text="@string/AC"
                        android:textSize="30sp"
                        android:layout_margin="5dp"
                        android:backgroundTint="@color/gray"
                        />
                <Button
                    android:id="@+id/possitiveOrNegativeButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:text="@string/sign"
                    android:textSize="30sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/gray"/>
                <Button
                    android:id="@+id/moduleButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:text="@string/module"
                    android:textSize="35sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/gray"/>
                <Button
                    android:id="@+id/quotientButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:text="@string/quotient"
                    android:textSize="40sp"
                    android:layout_margin="5dp"
                    android:backgroundTint="@color/gray"/>
            </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/sevenButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/seven"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/eightButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/eight"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/nineButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/nine"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/plusButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/plus"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/green"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/fourButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/four"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/fiveButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/five"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/sixButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/six"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/minusButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/minus"
                android:textSize="50sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/green"/>
        </LinearLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/oneButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/one"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/twoButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/two"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/threeButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/three"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/multiplyButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/multiply"
                android:textSize="35sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/green"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/zeroButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.65"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/zero"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/dotButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/point"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/brown"/>
            <Button
                android:id="@+id/equalButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:text="@string/equal"
                android:textSize="45sp"
                android:layout_margin="5dp"
                android:backgroundTint="@color/green"/>
        </LinearLayout>




    </LinearLayout>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>